styles/Home.module.css
.logo {
  width: 200px;
  /* height: 200px; */
  margin: 0 auto;
  word-break: break-all;
}
.main {
  min-height: 90vh;
  /* display: flex; */
  flex-direction: row;
  justify-content: center;
  align-items: center;
  font-family: "Monospace", Courier, monospace;
  padding: 30px;
  word-break: break-word;
}

.nav {
  width: 100%;
  height: auto;
  position: fixed;
  top:0px;
  z-index: 11;
  overflow: auto;
  border: 1px solid white;
  border-radius: 10px;
  background-color: rgba(51, 51, 64,1);
  display: flex;  
}

.trustylist {
  height: auto;
  min-height: 150px;
  max-height: 350px;
  overflow: auto;
  position: sticky;
  top: 0;
  z-index: 3;
  background: black;
}

.link {
  width: 100%;
  margin: 10px auto;
  padding: 3px;
  align-items: center;
  text-align: center;
  text-shadow: 0px 0px 5px black;
}

.link_active {
  color:orange;
  text-decoration:solid;
  border: 1px solid orange;
  border-radius: 10px;
}

.link_active2 {
  background-color :rgba(0, 0, 127, .3);
  padding: 30px;
  /* text-decoration:underline; */
  text-shadow: 3px 3px 5px solid black;
  border: .1px solid red;
  box-shadow: 0px 0px .3px .1px gray;
  border-radius: 10px;
}

.link:hover {
  color:orange;
  border: 1px solid orange;
  border-radius: 10px;
}

.div {
  border: 1px solid black;
  border-radius: 8px;
}

.footer {
  display: flex;
  padding: 2rem 0;
  border-top: 1px solid #eaeaea;
  justify-content: center;
  align-items: center;
}

.image {
  width: 100%;
  height: 50%;
  /* margin-left: 20%; */
}

.input_old {
  width: auto;
  min-width: 200px;
  height: 100%;
  padding: 1%;
  margin: auto;
  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
  border-radius: 10px;
}

.input {
  width: 100%;
  position: relative;
  min-width: 200px;
  height: 100%;
  padding: 1%;
  margin: auto;
  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
  border-radius: 10px;
}

.title {
  font-size: 2rem;
  margin: 2rem 0;
}

.description {
  line-height: 1;
  margin: 2%;
  font-size: 1.2rem;
  text-align: center;
  padding: 10px;
  border: 1px solid black;
  border-radius: 8px;
  /* box-shadow: 0px 0px 1px 1px white; */
  background: rgba(55, 57, 65, 0.36);
}

.description2 {
  line-height: 1;
  margin: 2%;
  font-size: 1.2rem;
  text-align: center;
  padding: 10px;
  /* border: 1px solid black; */
  border-radius: 8px;
  /* box-shadow: 0px 0px .3px .3px darkgray; */
  /* background: rgba(55, 57, 65, 0.36); */
}

.notification {
  z-index: 1;
  width: 90%;
  margin: 0 auto;
  height: auto;
  overflow: auto;
  position: fixed;
  top:50px;
  padding: 30px;
  background: rgba(255, 0, 0, 0.9);
  border-radius: 8px;
}

.button {
  position: relative;
  border-radius: 4px;
  background-color: rgb(176, 153, 47);
  border: none;
  color: #ffffff;
  font-size: 15px;
  padding: 5px;
  width: 100%;
  height: 50px;
  cursor: pointer;
  margin: 10px auto;
}

.button:hover, .button1:hover, .button2:hover, .button3:hover {
  color: orange;
  background: rgba(198, 135, 9, 0.1);
  border:1px solid white;
  box-shadow: 0px 0px 3px 3px rgba(251, 251, 264, 0.1);
}

.button1 {
  position: relative;
  border-radius: 4px;
  background-color: rgba(0,0,0,.3);
  border: none;
  color: #ffffff;
  font-size: 15px;
  padding: 5px;
  width: 100%;
  cursor: pointer;
  margin: 10px auto;
}

.button2 {
  border-radius: 4px;
  background-color: red;
  border: none;
  color: #ffffff;
  font-size: 15px;
  padding: 5px;
  width: 100px;
  cursor: pointer;
  margin: 2%;
}

.button3 {
  border-radius: 4px;
  background-color: green;
  border: none;
  color: #ffffff;
  font-size: 15px;
  padding: 5px;
  width: 100px;
  cursor: pointer;
  margin: 2%;
}

.inputDiv {
  width: auto;
  height: 100%;
  padding: 1%;
  margin: 2%;
  border: lightslategray;
  box-shadow: 0 0 .3px .1px rgba(0, 0, 127, .3);
  background: rgba(127, 127, 127, .3);
  border-radius: 10px;
  padding: 10px;
  /* border: 1px solid lightskyblue; */
  text-align: left;
}

.select {
  position: relative;
  border-radius: 4px;
  font-size: 15px;
  padding: 5px;
  width: 100%;
  cursor: pointer;
  margin: 2% auto;
}

.txs {
  display: flex;
  overflow-x: scroll;
  height: auto;
}

.tx {
  min-width: 350px;
  width: 100%;
  max-width: 100%;
  margin: 0 auto;
  padding: 10px;
  border: 1px solid blue;
  border-radius: 10px;
  word-break: break-word;
}

.tx:hover {
  border: 3px solid white;
}

.col_val{
  color: blue;
}

.col_dec{
  color: yellow;
}

.col_data{
  color: orange;
}

.col_exe{
  color: red;
}

@media (max-width: 1000px) {
  .main {
    width: 100%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
}

